--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-PORT=8090
-NODE_ENV=dev
-APP="Skill Crucial"
-IS_STORYBOOK=true
-ENABLE_SOCKETS=false
+MONGO_URL=mongodb+srv://<Name>:<Password>@cluster0.o9fmb.mongodb.net/<DBname>?retryWrites=true&w=majority
