--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "watch:server": "nodemon --legacy-watch start.js --watch server --watch client --exec \"npm run lint:server  --scripts-prepend-node-path && node\"",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile --colors",
     "build:ssr": "cross-env NODE_ENV=production webpack --config webpack.ssr.config.js --progress --profile --colors",
-
     "heroku-postbuild": "yarn run build:prod",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -75,6 +74,7 @@
     "@storybook/addon-viewport": "^5.3.19",
     "@storybook/cli": "^5.3.19",
     "autoprefixer": "^9.8.0",
+    "axios": "^0.20.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^26.0.1",
@@ -97,6 +97,7 @@
     "git-revision-webpack-plugin": "^3.0.6",
     "history": "^4.10.1",
     "image-webpack-loader": "^6.0.0",
+    "mongoose": "^5.10.3",
     "next": "^9.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
