--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/register": "^7.10.1",
     "@babel/runtime": "^7.10.2",
     "@hot-loader/react-dom": "^16.13.0",
+    "@material-ui/core": "^4.11.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
@@ -97,6 +98,7 @@
     "git-revision-webpack-plugin": "^3.0.6",
     "history": "^4.10.1",
     "image-webpack-loader": "^6.0.0",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.3",
     "next": "^9.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
