--- a/package.json
+++ b/package.json
@@ -68,8 +68,11 @@
     "@babel/preset-typescript": "^7.10.1",
     "@babel/register": "^7.10.1",
     "@babel/runtime": "^7.10.2",
+    "@date-io/date-fns": "^2.9.1",
     "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
